# i8kutils2

./: README.md  pyproject.toml
i8kutils/sysfs/: __init__.py  chip.py  controller.py  fan.py  session.py
i8kutils/util/: __init__.py  parsing.py
